--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,46 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["DOM", "ES2020"],
-    "module": "ESNext",
-    "jsx": "react-jsx",
-    "noEmit": true,
+    "target": "esnext",
+    "module": "esnext",
+		"moduleResolution": "bundler",
     "strict": true,
-    "skipLibCheck": true,
-    "isolatedModules": true,
+		"jsx": "react-jsx",
+    "sourceMap": true,
     "resolveJsonModule": true,
-    "moduleResolution": "bundler",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+    "baseUrl": "./",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "skipDefaultLibCheck": true,
     "useDefineForClassFields": true,
-    "allowImportingTsExtensions": true
+		"allowImportingTsExtensions": true,
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable"
+    ],
+    "types": [],
+    "paths": {
+      "~": [
+        "./src"
+      ],
+      "~/*": [
+        "./src/*"
+      ]
+    }
   },
-  "include": ["src"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+  ],
+  "exclude": [
+    "node_modules",
+    "assets",
+    "dist/**"
+  ]
 }
