--- a/package.json
+++ b/package.json
@@ -2,20 +2,55 @@
   "name": "van-admin",
   "private": true,
   "version": "1.0.0",
+  "bump": {
+    "before": [
+      "git pull --rebase"
+    ],
+    "changelog": true
+  },
   "scripts": {
+    "prepare": "pnpm exec simple-git-hooks",
     "dev": "rsbuild dev --open",
     "build": "rsbuild build",
-    "preview": "rsbuild preview"
+    "dev:rsdoctor": "cross-env RSDOCTOR=true rsbuild dev",
+    "build:rsdoctor": "cross-env RSDOCTOR=true rsbuild build",
+    "preview": "rsbuild preview",
+    "lint": "biome lint --write ./src --no-errors-on-unmatched",
+    "format": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,ts,css,scss,vue,html,md}\""
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm exec lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --ignore-path ./.gitignore --write "
+    ],
+    "*.{js,ts,cjs,mjs,jsx,tsx,json}": [
+      "biome lint --write ./src --no-errors-on-unmatched"
+    ]
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.0",
+    "@innei/prettier": "^0.15.0",
     "@rsbuild/core": "^1.0.1",
+    "@rsbuild/plugin-basic-ssl": "^1.1.1",
     "@rsbuild/plugin-react": "^1.0.1",
+    "@rsdoctor/rspack-plugin": "^0.4.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.2"
-  }
+    "cross-env": "^7.0.3",
+    "postcss": "^8.4.45",
+    "postcss-nested": "^6.2.0",
+    "postcss-preset-env": "^10.0.3",
+    "prettier": "^3.3.3",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5.5.2",
+    "unplugin-auto-import": "^0.18.3"
+  },
+  "packageManager": "pnpm@9.9.0"
 }
