dep: rm auto-import because it doesn't do much

--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,25 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.6.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.0/schema.json",
+  "vcs": {
+    "enabled": false,
+    "clientKind": "git",
+    "useIgnoreFile": false
+  },
+  "files": {
+    "ignoreUnknown": false,
+    "ignore": []
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "tab"
+  },
   "organizeImports": {
     "enabled": true
   },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": false,
+      "recommended": true,
       "a11y": {
         "noBlankTarget": "warn"
       },
@@ -18,7 +31,8 @@
         "noUselessThisAlias": "error",
         "noUselessTypeConstraint": "error",
         "noWith": "error",
-        "useArrowFunction": "off"
+        "useArrowFunction": "off",
+        "useOptionalChain": "off"
       },
       "correctness": {
         "noUnusedImports": "error",
@@ -43,7 +57,6 @@
         "noUnsafeOptionalChaining": "error",
         "noUnusedLabels": "error",
         "noUnusedVariables": "warn",
-        "useExhaustiveDependencies": "warn",
         "useHookAtTopLevel": "error",
         "useIsNan": "error",
         "useValidForDirection": "error",
@@ -95,24 +108,12 @@
         "useGetterReturn": "error",
         "useValidTypeof": "error"
       }
-    },
-    "ignore": [
-      "*.min.*",
-      "CHANGELOG.md",
-      "dist",
-      "LICENSE*",
-      "output",
-      "coverage",
-      "public",
-      "temp",
-      "packages-lock.json",
-      "pnpm-lock.yaml",
-      "yarn.lock",
-      "__snapshots__",
-      "!.github",
-      "!.vitepress",
-      "!.vscode"
-    ]
+    }
+  },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "double"
+    }
   },
   "overrides": [
     {
