--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "postcss-preset-env": "^10.0.3",
     "prettier": "^3.3.3",
     "simple-git-hooks": "^2.11.1",
-    "typescript": "^5.5.2",
-    "unplugin-auto-import": "^0.18.3"
+    "typescript": "^5.5.2"
   },
   "packageManager": "pnpm@9.9.0"
 }
