--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PUBLIC_LOGIN_BG=https://fastly.jsdelivr.net/gh/mx-space/docs-images@master/images/chichi-1.jpeg
-PUBLIC_WEB_URL=http://localhost:3000
-PUBLIC_BASE_API=http://localhost:3000
-PUBLIC_GATEWAY=http://localhost:3000
+PUBLIC_WEB_URL=/api
+PUBLIC_BASE_API=/api
+PUBLIC_GATEWAY=/api
