--- a/package.json
+++ b/package.json
@@ -30,11 +30,18 @@
     ]
   },
   "dependencies": {
+    "@mx-space/api-client": "^1.16.1",
+    "@tanstack/react-query": "^5.56.2",
+    "js-cookie": "^3.0.5",
+    "lodash-es": "^4.17.21",
+    "nanoid": "^5.0.7",
+    "ofetch": "^1.3.4",
     "qier-progress": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "tailwindcss": "^3.4.11"
+    "tailwindcss": "^3.4.11",
+    "umi-request": "^1.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
@@ -43,6 +50,9 @@
     "@rsbuild/plugin-basic-ssl": "^1.1.1",
     "@rsbuild/plugin-react": "^1.0.1",
     "@rsdoctor/rspack-plugin": "^0.4.2",
+    "@tanstack/react-query-devtools": "^5.56.2",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "cross-env": "^7.0.3",
