--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,12 @@
+save-exact=true
+public-hoist-pattern[]=*eslint*
+public-hoist-pattern[]=*types*
+public-hoist-pattern[]=*@prettier/plugin-*
+public-hoist-pattern[]=*prettier-plugin-*
+
+public-hoist-pattern[]=*@codemirror*
+
 registry=https://registry.npmjs.org
 
+# https://zenn.dev/haxibami/scraps/083718c1beec04
+strict-peer-dependencies=false
