--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "scripts": {
     "prepare": "pnpm exec simple-git-hooks",
-    "dev": "rsbuild dev --open",
+    "dev": "rsbuild dev",
     "build": "rsbuild build",
     "dev:rsdoctor": "cross-env RSDOCTOR=true rsbuild dev",
     "build:rsdoctor": "cross-env RSDOCTOR=true rsbuild build",
     "preview": "rsbuild preview",
     "lint": "biome lint --write ./src --no-errors-on-unmatched",
-    "format": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,ts,css,scss,vue,html,md}\""
+    "format": "prettier --write --log-level warn \"src/**/*.{js,json,tsx,ts,css,scss,vue,html,md}\""
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
@@ -30,22 +30,47 @@
     ]
   },
   "dependencies": {
+    "@auth/core": "^0.35.0",
     "@mx-space/api-client": "^1.16.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "1.2.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@simplewebauthn/browser": "^10.0.0",
     "@tanstack/react-query": "^5.56.2",
+    "@vicons/antd": "0.12.0",
+    "@vicons/fa": "0.12.0",
+    "@vicons/fluent": "0.12.0",
+    "@vicons/ionicons4": "0.12.0",
+    "@vicons/ionicons5": "0.12.0",
+    "@vicons/material": "0.12.0",
+    "@vicons/tabler": "0.12.0",
+    "@vicons/utils": "0.1.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
+    "lucide-react": "^0.441.0",
     "nanoid": "^5.0.7",
     "ofetch": "^1.3.4",
     "qier-progress": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "2.4.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "sonner": "1.5.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.11",
+    "tailwindcss-animate": "^1.0.7",
     "umi-request": "^1.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
-    "@innei/prettier": "^0.15.0",
+    "@innei/prettier": "^0.14.2",
     "@rsbuild/core": "^1.0.1",
     "@rsbuild/plugin-basic-ssl": "^1.1.1",
     "@rsbuild/plugin-react": "^1.0.1",
@@ -55,6 +80,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-logger": "^3.0.13",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.45",
     "postcss-nested": "^6.2.0",
@@ -62,6 +88,9 @@
     "prettier": "^3.3.3",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.5.2"
+  },
+  "resolutions": {
+    "prettier-plugin-tailwindcss": "0.6.5"
   },
   "packageManager": "pnpm@9.9.0"
 }
