--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,13 +30,14 @@
       ],
       "~/*": [
         "./src/*"
-      ]
+      ],
+      "@/*": ["./*"]
     }
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
-    "src/**/*.tsx",
+    "src/**/*.tsx", "src/components/ui/Button",
   ],
   "exclude": [
     "node_modules",
