--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     ]
   },
   "dependencies": {
-    "@auth/core": "^0.35.0",
+    "@auth/core": "^0.35.2",
     "@mx-space/api-client": "^1.16.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "1.2.1",
@@ -53,7 +54,7 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.441.0",
     "nanoid": "^5.0.7",
-    "ofetch": "^1.3.4",
+    "ofetch": "^1.4.0",
     "qier-progress": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -64,33 +65,34 @@
     "redux-persist": "^6.0.0",
     "sonner": "1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "umi-request": "^1.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.2",
     "@innei/prettier": "^0.14.2",
-    "@rsbuild/core": "^1.0.1",
+    "@rsbuild/core": "^1.0.7",
     "@rsbuild/plugin-basic-ssl": "^1.1.1",
-    "@rsbuild/plugin-react": "^1.0.1",
-    "@rsdoctor/rspack-plugin": "^0.4.2",
-    "@tanstack/react-query-devtools": "^5.56.2",
+    "@rsbuild/plugin-react": "^1.0.2",
+    "@rsbuild/plugin-svgr": "1.0.2",
+    "@rsdoctor/rspack-plugin": "^0.4.4",
+    "@tanstack/react-query-devtools": "^5.58.0",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "postcss-nested": "^6.2.0",
-    "postcss-preset-env": "^10.0.3",
+    "postcss-preset-env": "^10.0.5",
     "prettier": "^3.3.3",
     "simple-git-hooks": "^2.11.1",
-    "typescript": "^5.5.2"
+    "typescript": "^5.6.2"
   },
   "resolutions": {
     "prettier-plugin-tailwindcss": "0.6.5"
   },
-  "packageManager": "pnpm@9.9.0"
+  "packageManager": "pnpm@9.11.0"
 }
