--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "changelog": true
   },
   "scripts": {
-    "prepare": "pnpm exec simple-git-hooks",
     "dev": "rsbuild dev",
     "build": "rsbuild build",
     "dev:rsdoctor": "cross-env RSDOCTOR=true rsbuild dev",
     "build:rsdoctor": "cross-env RSDOCTOR=true rsbuild build",
     "preview": "rsbuild preview",
+    "prepare": "pnpm exec simple-git-hooks",
     "lint": "biome lint --write ./src --no-errors-on-unmatched",
     "format": "prettier --write --log-level warn \"src/**/*.{js,json,tsx,ts,css,scss,vue,html,md}\""
   },
@@ -39,6 +39,7 @@
     "@radix-ui/react-toast": "1.2.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@simplewebauthn/browser": "^10.0.0",
+    "@stepperize/react": "3.0.1",
     "@tanstack/react-query": "^5.56.2",
     "@vicons/antd": "0.12.0",
     "@vicons/fa": "0.12.0",
@@ -48,6 +49,7 @@
     "@vicons/material": "0.12.0",
     "@vicons/tabler": "0.12.0",
     "@vicons/utils": "0.1.4",
+    "canvas-confetti": "1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
@@ -63,7 +65,6 @@
     "react-router-dom": "^6.26.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "sonner": "1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
@@ -78,6 +79,7 @@
     "@rsbuild/plugin-svgr": "1.0.2",
     "@rsdoctor/rspack-plugin": "^0.4.4",
     "@tanstack/react-query-devtools": "^5.58.0",
+    "@types/canvas-confetti": "1.6.4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.9",
