add: ignore deps

--- a/renovate.json
+++ b/renovate.json
@@ -25,6 +25,7 @@
     "@codemirror/view",
     "@ddietr/codemirror-themes",
     "@lezer/highlight",
+    "prettier-plugin-tailwindcss",
     "eslint"
   ]
 }
