--- a/.npmrc
+++ b/.npmrc
@@ -6,7 +6,7 @@ public-hoist-pattern[]=*prettier-plugin-*
 
 public-hoist-pattern[]=*@codemirror*
 
-registry=https://registry.npmmirror.com
+# registry=https://registry.npmmirror.com
 
 # https://zenn.dev/haxibami/scraps/083718c1beec04
 strict-peer-dependencies=false
