--- a/biome.json
+++ b/biome.json
@@ -16,6 +16,11 @@
   "organizeImports": {
     "enabled": true
   },
+  "css": {
+    "parser": {
+      "cssModules": true
+    }
+  },
   "linter": {
     "enabled": true,
     "rules": {
