--- a/package.json
+++ b/package.json
@@ -30,30 +30,33 @@
     ]
   },
   "dependencies": {
-    "@auth/core": "^0.35.2",
+    "@auth/core": "^0.35.3",
     "@hookform/resolvers": "3.9.0",
     "@mx-space/api-client": "^1.16.1",
-    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-scroll-area": "1.2.0",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "1.1.0",
     "@radix-ui/react-toast": "1.2.1",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@radix-ui/react-tooltip": "1.1.3",
+    "@reduxjs/toolkit": "^2.2.8",
+    "@ricons/antd": "0.12.0",
+    "@ricons/fa": "0.12.0",
+    "@ricons/fluent": "0.12.0",
+    "@ricons/ionicons4": "0.12.0",
+    "@ricons/ionicons5": "0.12.0",
+    "@ricons/material": "0.12.0",
+    "@ricons/tabler": "0.12.0",
+    "@ricons/utils": "0.1.4",
     "@simplewebauthn/browser": "^10.0.0",
     "@stepperize/react": "3.0.1",
-    "@tanstack/react-query": "^5.56.2",
-    "@vicons/antd": "0.12.0",
-    "@vicons/fa": "0.12.0",
-    "@vicons/fluent": "0.12.0",
-    "@vicons/ionicons4": "0.12.0",
-    "@vicons/ionicons5": "0.12.0",
-    "@vicons/material": "0.12.0",
-    "@vicons/tabler": "0.12.0",
-    "@vicons/utils": "0.1.4",
+    "@tanstack/react-query": "^5.59.11",
+    "ahooks": "3.8.1",
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -63,47 +66,47 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.441.0",
     "nanoid": "^5.0.7",
-    "ofetch": "^1.4.0",
+    "ofetch": "^1.4.1",
     "qier-progress": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "7.53.0",
     "react-hot-toast": "2.4.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "umi-request": "^1.4.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.2",
+    "@biomejs/biome": "^1.9.3",
     "@innei/prettier": "^0.14.2",
-    "@rsbuild/core": "^1.0.8",
+    "@rsbuild/core": "^1.0.13",
     "@rsbuild/plugin-basic-ssl": "^1.1.1",
     "@rsbuild/plugin-react": "^1.0.3",
     "@rsbuild/plugin-svgr": "1.0.2",
-    "@rsdoctor/rspack-plugin": "^0.4.5",
-    "@tanstack/react-query-devtools": "^5.58.0",
+    "@rsdoctor/rspack-plugin": "^0.4.6",
+    "@tanstack/react-query-devtools": "^5.59.9",
     "@types/canvas-confetti": "1.6.4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3.10",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "cross-env": "^7.0.3",
     "postcss": "^8.4.47",
     "postcss-nested": "^6.2.0",
-    "postcss-preset-env": "^10.0.5",
+    "postcss-preset-env": "^10.0.7",
     "prettier": "^3.3.3",
     "simple-git-hooks": "^2.11.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "resolutions": {
     "prettier-plugin-tailwindcss": "0.6.5"
   },
-  "packageManager": "pnpm@9.11.0"
+  "packageManager": "pnpm@9.12.1"
 }
