feat: browser router => hash router

--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,8 @@
     "useIgnoreFile": false
   },
   "files": {
-    "ignoreUnknown": false,
-    "ignore": []
+    "ignoreUnknown": true,
+    "ignore": ["node_modules"]
   },
   "formatter": {
     "enabled": true,
