--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-router-dom": "^6.27.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "4.8.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
