--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.2",
     "@radix-ui/react-scroll-area": "1.2.0",
     "@radix-ui/react-select": "2.1.1",
     "@radix-ui/react-separator": "1.1.0",
@@ -60,6 +61,7 @@
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "4.1.0",
     "emblor": "1.4.6",
     "js-cookie": "^3.0.5",
     "kbar": "0.1.0-beta.45",
@@ -100,6 +102,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "cross-env": "^7.0.3",
+    "daisyui": "4.12.13",
     "postcss": "^8.4.47",
     "postcss-nested": "^6.2.0",
     "postcss-preset-env": "^10.0.7",
